<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    >


    <TextView
        android:id="@+id/tVabout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/textoversao_about"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        />

    <TextView

        android:id="@+id/tVabout2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto_about"
        android:layout_marginTop="45dp"

        />

    <TextView
        android:id="@+id/tVabout3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/texto2_about"
        android:gravity="center"
        android:layout_marginTop="37dp"
        />


    <TextView
        android:id="@+id/tVabout4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/texto3_about"
        android:gravity="center"
        android:layout_marginTop="50dp"

        />

</LinearLayout>