<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >


    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/texto_help"
        android:textAlignment="center"

        />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/texto2_help"

        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/texto3_help"

        android:textAlignment="center" />


</LinearLayout>
