<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFFAFA"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewGb"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gb_tv"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextGb"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewGba1"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gba1"
            android:textColor="#000000"
            />

        <EditText
            android:id="@+id/editTextGba1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="20dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewGba2"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gba2"
            android:textColor="#000000" />


        <EditText
            android:id="@+id/editTextGba2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewGba3"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/gba3"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextGba3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn"
            android:layout_marginTop="15dp"

            />

    </LinearLayout>

</LinearLayout>